<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_bill_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bill_amount_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_bill_amount"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/bill_amount_hint_text"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_bill_amount" />

    <TextView
        android:id="@+id/text_service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/service_question_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_bill_amount" />

    <RadioGroup
        android:id="@+id/radio_tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radiob_good"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_service_question">

        <RadioButton
            android:id="@+id/radiob_guilty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_option_1" />

        <RadioButton
            android:id="@+id/radiob_excellent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_option_2" />

        <RadioButton
            android:id="@+id/radiob_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_option_3" />

        <RadioButton
            android:id="@+id/radiob_bad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_option_4" />

        <RadioButton
            android:id="@+id/radiob_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_option_5" />
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/round_tip_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_tip_options" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_round" />

    <TextView
        android:id="@+id/text_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tip_amount_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_calculate" />

    <TextView
        android:id="@+id/text_result_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_result_text" />

    <TextView
        android:id="@+id/text_total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/total_amount_text"
        app:layout_constraintStart_toEndOf="@+id/text_result_text"
        app:layout_constraintTop_toTopOf="@+id/text_result_text" />

    <TextView
        android:id="@+id/text_total_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_total_text"
        app:layout_constraintTop_toBottomOf="@id/text_total_text" />

</androidx.constraintlayout.widget.ConstraintLayout>